Firebase funcionando (google tambien)

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -10,4 +10,7 @@
       <ion-title size="large">home</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-button expand="block" color="danger" (click)="logout()">
+    Cerrar sesión
+  </ion-button>
 </ion-content>
