--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -24,5 +24,8 @@
       <ion-input type="password" [(ngModel)]="confirmPassword" name="confirmPassword" required></ion-input>
     </ion-item>
     <ion-button expand="block" type="submit">Registrarse</ion-button>
+    <ion-button expand="block" fill="outline" type="button" (click)="onRegisterWithGoogle()">
+      Registrarse con Google
+    </ion-button>
   </form>
 </ion-content>
