--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,15 +1,29 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>home</ion-title>
+    <ion-title>Mis mascotas</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">home</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" class="ion-padding">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" *ngFor="let mascota of mascotas">
+        <ion-card>
+          <img *ngIf="mascota.fotoUrl" [src]="mascota.fotoUrl" style="width: 100%; height: 120px; object-fit: cover;">
+          <ion-card-header>
+            <ion-card-title>{{ mascota.nombre }}</ion-card-title>
+            <ion-card-subtitle>{{ mascota.edad }} meses</ion-card-subtitle>
+          </ion-card-header>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6">
+        <ion-card (click)="irAAgregarMascota()" style="display: flex; align-items: center; justify-content: center; height: 160px; cursor: pointer;">
+          <ion-icon name="add" size="large"></ion-icon>
+          <div>Añadir Mascota</div>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   <ion-button expand="block" color="danger" (click)="logout()">
     Cerrar sesión
   </ion-button>
