feat: add navigation to registration page and load pets on user login

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -16,4 +16,8 @@
     </ion-item>
     <ion-button expand="block" type="submit">Entrar</ion-button>
   </form>
+  <div style="text-align:center; margin-top: 16px;">
+    No eres miembro?
+    <a style="color: var(--ion-color-primary); cursor: pointer;" (click)="goToRegister()">Regístrate ahora</a>
+  </div>
 </ion-content>
