--- a/src/app/pages/pet-detail/pet-detail.page.html
+++ b/src/app/pages/pet-detail/pet-detail.page.html
@@ -5,6 +5,10 @@
 </ion-header>
 
 <ion-content class="ion-padding">
+  <ion-button expand="block" fill="clear" (click)="volverAHome()">
+    Volver
+  </ion-button>
+
   <ion-card *ngIf="mascota">
     <img *ngIf="mascota.fotoUrl" [src]="mascota.fotoUrl" alt="Foto de la mascota" />
     <ion-card-header>
