--- a/src/app/pages/edit-pet/edit-pet.page.html
+++ b/src/app/pages/edit-pet/edit-pet.page.html
@@ -15,8 +15,13 @@
       <ion-input type="text" [(ngModel)]="fichaNumero" name="fichaNumero"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="floating">Edad</ion-label>
-      <ion-input type="number" [(ngModel)]="edad" name="edad" required></ion-input>
+      <ion-label position="stacked">Fecha de nacimiento</ion-label>
+      <ion-datetime
+        presentation="date"
+        [(ngModel)]="fechaNacimiento"
+        name="fechaNacimiento"
+        required>
+      </ion-datetime>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Sexo</ion-label>
