--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -12,7 +12,9 @@
           <img *ngIf="mascota.fotoUrl" [src]="mascota.fotoUrl" style="width: 100%; height: 120px; object-fit: cover;">
           <ion-card-header>
             <ion-card-title>{{ mascota.nombre | capitalize }}</ion-card-title>
-            <ion-card-subtitle>{{ mascota.edad }} meses</ion-card-subtitle>
+            <ion-card-subtitle>
+              {{ calcularAnios(mascota.fechaNacimiento) }} años
+            </ion-card-subtitle>
           </ion-card-header>
         </ion-card>
       </ion-col>
