--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,10 +1,38 @@
+<ion-menu side="start" menuId="main-menu" contentId="main-content">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>Patita Sana</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-item lines="none">
+        <ion-avatar slot="start">
+          <ion-icon name="person-circle" style="font-size: 2.5em;"></ion-icon>
+        </ion-avatar>
+        <ion-label>
+          <h2>{{ userName }}</h2>
+        </ion-label>
+      </ion-item>
+      <ion-item button (click)="logout()">
+        <ion-icon name="log-out-outline" slot="start"></ion-icon>
+        <ion-label>Cerrar sesión</ion-label>
+      </ion-item>
+      <!-- Aquí puedes agregar más opciones, como eliminar mascota, modo oscuro, etc. -->
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
     <ion-title>Mis mascotas</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="ion-padding">
+<ion-content id="main-content" [fullscreen]="true" class="ion-padding">
   <ion-grid>
     <ion-row>
       <ion-col size="6" *ngFor="let mascota of mascotas">
@@ -26,7 +54,4 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-button expand="block" color="danger" (click)="logout()">
-    Cerrar sesión
-  </ion-button>
 </ion-content>
