--- a/src/app/pages/not-found/not-found.page.html
+++ b/src/app/pages/not-found/not-found.page.html
@@ -1,13 +1,14 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>not-found</ion-title>
+    <ion-title>Patita Sana</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">not-found</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding" [fullscreen]="true">
+  <div style="text-align:center; margin-top: 40px;">
+    <h2>¡Oops!</h2>
+    <p>Página no encontrada.</p>
+    <ion-button expand="block" (click)="goHome()">Ir a inicio</ion-button>
+    <ion-button expand="block" color="danger" (click)="logout()">Cerrar sesión</ion-button>
+  </div>
 </ion-content>
