feat: add confirmation and functionality for pet deletion, including document cleanup

--- a/src/app/pages/pet-detail/pet-detail.page.html
+++ b/src/app/pages/pet-detail/pet-detail.page.html
@@ -23,6 +23,9 @@
   </ion-card>
 
   <ion-button expand="block" (click)="editarMascota()">Editar datos</ion-button>
+  <ion-button expand="block" color="danger" (click)="confirmarEliminarMascota()">
+  Eliminar mascota
+  </ion-button>
 
   <ion-text>
     <h2>Archivos médicos</h2>
