--- a/src/app/pages/add-pet/add-pet.page.html
+++ b/src/app/pages/add-pet/add-pet.page.html
@@ -39,5 +39,6 @@
       <input type="file" accept="image/*" (change)="onFotoSelected($event)" />
     </ion-item>
     <ion-button expand="block" type="submit">Guardar Mascota</ion-button>
+    <ion-button expand="block" color="medium" type="button" (click)="cancelar()">Cancelar</ion-button>
   </form>
 </ion-content>
