--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -41,7 +41,7 @@
           <ion-card-header>
             <ion-card-title>{{ mascota.nombre | capitalize }}</ion-card-title>
             <ion-card-subtitle>
-              {{ calcularEdad(mascota.fechaNacimiento) }}
+              {{ calcularEdadHome(mascota.fechaNacimiento) }}
             </ion-card-subtitle>
           </ion-card-header>
         </ion-card>
