--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -31,9 +31,10 @@
           class="custom-input"
         ></ion-input>
       </ion-item>
-      <div class="login-button">
-        <ion-button expand="block" type="submit">Entrar</ion-button>
-      </div>
+
+      <ion-button class="login-button" expand="block" fill="clear" type="submit"
+        >Entrar</ion-button
+      >
     </form>
 
     <ion-button
