--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,57 +1,94 @@
-<ion-menu side="start" menuId="main-menu" contentId="main-content">
-  <ion-header>
-    <ion-toolbar color="primary">
-      <ion-title>Patita Sana</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content>
-    <ion-list>
-      <ion-item lines="none">
-        <ion-avatar slot="start">
-          <ion-icon name="person-circle" style="font-size: 2.5em;"></ion-icon>
-        </ion-avatar>
-        <ion-label>
-          <h2>{{ userName }}</h2>
-        </ion-label>
-      </ion-item>
-      <ion-item button (click)="logout()">
-        <ion-icon name="log-out-outline" slot="start"></ion-icon>
-        <ion-label>Cerrar sesión</ion-label>
-      </ion-item>
-      <!-- Aquí puedes agregar más opciones, como eliminar mascota, modo oscuro, etc. -->
-    </ion-list>
-  </ion-content>
-</ion-menu>
+<ion-content>
+  <div class="all-content">
+    <ion-menu
+      side="start"
+      menuId="main-menu"
+      contentId="main-content"
+      fill="clear"
+      class="side-bar-header"
+    >
+      <ion-header class="side-bar-header">
+        <ion-toolbar color="primary" class="side-bar-header">
+          <ion-title class="side-bar-header">Patita Sana</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content class="header">
+        <ion-list class="logout">
+          <ion-item lines="none" class="logout">
+            <ion-avatar slot="start">
+              <ion-icon
+                name="person-circle"
+                style="font-size: 2.5em"
+              ></ion-icon>
+            </ion-avatar>
+            <ion-label fill="clear" class="ion-card">
+              <h2>{{ userName }}</h2>
+            </ion-label>
+          </ion-item>
+          <ion-item button (click)="logout()" class="logout">
+            <ion-icon name="log-out-outline" slot="start"></ion-icon>
+            <ion-label>Cerrar sesión</ion-label>
+          </ion-item>
+          <!-- Aquí puedes agregar más opciones, como eliminar mascota, modo oscuro, etc. -->
+        </ion-list>
+      </ion-content>
+    </ion-menu>
 
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button menu="main-menu"></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Mis mascotas</ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-header [translucent]="true" class="header" fill="clear">
+      <ion-toolbar class="header">
+        <ion-buttons slot="start">
+          <ion-menu-button menu="main-menu"></ion-menu-button>
+        </ion-buttons>
+        <ion-title class="header" fill="clear">Mis mascotas</ion-title>
+      </ion-toolbar>
+    </ion-header>
 
-<ion-content id="main-content" [fullscreen]="true" class="ion-padding">
-  <ion-grid>
-    <ion-row>
-      <ion-col size="6" *ngFor="let mascota of mascotas">
-        <ion-card (click)="verDetalleMascota(mascota.id)" style="cursor:pointer;">
-          <img *ngIf="mascota.fotoUrl" [src]="mascota.fotoUrl" style="width: 100%; height: 120px; object-fit: cover;">
-          <ion-card-header>
-            <ion-card-title>{{ mascota.nombre | capitalize }}</ion-card-title>
-            <ion-card-subtitle>
-              {{ calcularEdadHome(mascota.fechaNacimiento) }}
-            </ion-card-subtitle>
-          </ion-card-header>
-        </ion-card>
-      </ion-col>
-      <ion-col size="6">
-        <ion-card (click)="irAAgregarMascota()" style="display: flex; align-items: center; justify-content: center; height: 160px; cursor: pointer;">
-          <ion-icon name="add" size="large"></ion-icon>
-          <div>Añadir Mascota</div>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+    <ion-content id="main-content" [fullscreen]="true" class="ion-padding">
+      <img src="assets/gatio.jpg" alt="" />
+
+      <ion-grid>
+        <ion-row>
+          <ion-col size="6" *ngFor="let mascota of mascotas">
+            <ion-card
+              (click)="verDetalleMascota(mascota.id)"
+              style="cursor: pointer"
+              class="ion-card"
+              fill="clear"
+            >
+              <img
+                *ngIf="mascota.fotoUrl"
+                [src]="mascota.fotoUrl"
+                style="width: 100%; height: 120px; object-fit: cover"
+              />
+              <ion-card-header>
+                <ion-card-title
+                  >{{ mascota.nombre | capitalize }}</ion-card-title
+                >
+                <ion-card-subtitle>
+                  {{ calcularEdadHome(mascota.fechaNacimiento) }}
+                </ion-card-subtitle>
+              </ion-card-header>
+            </ion-card>
+          </ion-col>
+          <ion-col size="6">
+            <ion-card
+              fill="clear"
+              class="ion-card"
+              (click)="irAAgregarMascota()"
+              style="
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 160px;
+                cursor: pointer;
+              "
+            >
+              <ion-icon name="add" size="large"></ion-icon>
+              <div>Añadir Mascota</div>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-content>
+  </div>
 </ion-content>
