--- a/src/app/pages/edit-pet/edit-pet.page.html
+++ b/src/app/pages/edit-pet/edit-pet.page.html
@@ -1,14 +1,14 @@
 <ion-content>
-  <ion-header class="formulario" fill="clear">
-    <ion-toolbar class="formulario" fill="clear">
-      <ion-title class="formulario" fill="clear">Editar Mascota</ion-title>
+  <ion-header fill="clear">
+    <ion-toolbar class="ion-header">
+      <ion-title class="ion-header">Editar Mascota</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <ion-content class="ion-padding" class="formulario" fill="clear">
     <form *ngIf="mascota" (ngSubmit)="guardarCambios()">
-      <ion-item>
-        <ion-label position="floating">Nombre</ion-label>
+      <ion-item class="input-item">
+        <ion-label position="floating" class="input-label">Nombre</ion-label>
         <ion-input
           type="text"
           [(ngModel)]="nombre"
@@ -16,16 +16,20 @@
           required
         ></ion-input>
       </ion-item>
-      <ion-item>
-        <ion-label position="floating">Número de Ficha</ion-label>
+      <ion-item class="input-item">
+        <ion-label position="floating" class="input-label"
+          >Número de Ficha</ion-label
+        >
         <ion-input
           type="text"
           [(ngModel)]="fichaNumero"
           name="fichaNumero"
         ></ion-input>
       </ion-item>
-      <ion-item>
-        <ion-label position="stacked">Fecha de nacimiento</ion-label>
+      <ion-item class="input-item">
+        <ion-label position="stacked" class="input-label"
+          >Fecha de nacimiento</ion-label
+        >
         <ion-datetime
           presentation="date"
           [(ngModel)]="fechaNacimiento"
@@ -34,23 +38,31 @@
         >
         </ion-datetime>
       </ion-item>
-      <ion-item>
-        <ion-label position="floating">Sexo</ion-label>
+      <ion-item class="input-item">
+        <ion-label position="floating" class="input-label">Sexo</ion-label>
         <ion-select [(ngModel)]="sexo" name="sexo" required>
           <ion-select-option value="Macho">Macho</ion-select-option>
           <ion-select-option value="Hembra">Hembra</ion-select-option>
         </ion-select>
       </ion-item>
-      <ion-item>
-        <ion-label position="floating">Peso (kg)</ion-label>
+      <ion-item class="input-item">
+        <ion-label position="floating" class="input-label">Peso (kg)</ion-label>
         <ion-input type="number" [(ngModel)]="peso" name="peso"></ion-input>
       </ion-item>
-      <ion-button expand="block" type="submit">Guardar Cambios</ion-button>
+      <ion-button
+        expand="block"
+        type="submit"
+        class="guardar-button"
+        fill="clear"
+        >Guardar Cambios</ion-button
+      >
       <ion-button
         expand="block"
         color="medium"
         type="button"
         (click)="cancelar()"
+        class="custom-button"
+        fill="clear"
         >Cancelar</ion-button
       >
     </form>
