--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -7,9 +7,9 @@
       fill="clear"
       class="side-bar-header"
     >
-      <ion-header class="side-bar-header">
-        <ion-toolbar color="primary" class="side-bar-header">
-          <ion-title class="side-bar-header">Patita Sana</ion-title>
+      <ion-header class="header">
+        <ion-toolbar class="header">
+          <ion-title class="header">Patita Sana</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content class="header">
