--- a/src/app/pages/reset-password/reset-password.page.html
+++ b/src/app/pages/reset-password/reset-password.page.html
@@ -1,15 +1,35 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Restablecer Contraseña</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
+  <ion-header>
+    <ion-toolbar class="ion-header">
+      <ion-title class="ion-header">Restablecer Contraseña</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
-<ion-content class="ion-padding">
-  <form (ngSubmit)="onResetPassword()">
-    <ion-item>
-      <ion-label position="floating">Nueva contraseña</ion-label>
-      <ion-input type="password" [(ngModel)]="newPassword" name="newPassword" required></ion-input>
-    </ion-item>
-    <ion-button expand="block" type="submit">Guardar nueva contraseña</ion-button>
-  </form>
+  <div class="foto-banner">
+    <img src="assets/perrio.jpg" alt="Restablecer Contraseña Banner" />
+  </div>
+
+  <ion-content class="ion-padding">
+    <form (ngSubmit)="onResetPassword()">
+      <ion-item class="input-item">
+        <ion-label position="floating" class="input-label"
+          >Nueva contraseña</ion-label
+        >
+        <ion-input
+          type="password"
+          [(ngModel)]="newPassword"
+          name="newPassword"
+          required
+        ></ion-input>
+      </ion-item>
+      <ion-button
+        expand="block"
+        type="submit"
+        class="cambiar-button"
+        fill="clear"
+      >
+        Guardar nueva contraseña</ion-button
+      >
+    </form>
+  </ion-content>
 </ion-content>
