cambios antes de fusionar

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -22,7 +22,7 @@
               ></ion-icon>
             </ion-avatar>
             <ion-label fill="clear" class="ion-card">
-              <h2>{{ userName }}</h2>
+              <h2 class="username">{{ userName }}</h2>
             </ion-label>
           </ion-item>
           <ion-item button (click)="logout()" class="logout">
