--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -47,7 +47,7 @@
       ¿Olvidaste tu contraseña?
     </ion-button>
 
-    <div style="text-align: center; margin-top: 16px">
+    <div style="text-align: center; margin-top: 16px" class="register-link">
       No eres miembro?
       <a
         style="color: var(--green-matcha); cursor: pointer"
