feat: enhance pet detail and symptom form with modals for medical files and symptoms

--- a/src/app/pages/symptom-form/symptom-form.page.html
+++ b/src/app/pages/symptom-form/symptom-form.page.html
@@ -70,5 +70,9 @@
       <ion-icon slot="start" name="paw"></ion-icon>
       Guardar Registro
     </ion-button>
+
+    <ion-button expand="block" color="medium" type="button" (click)="volverAPetDetail()">
+      Cancelar
+    </ion-button>
   </form>
 </ion-content>
